<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutMainTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/txtMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:maxLines="1"
        android:text="@string/app_name"
        android:textColor="#ffffff" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:id="@+id/buttonMainPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-5dp"
        android:layout_weight="0"
        android:text="@string/place"
        android:width="50dp" />

    <Button
        android:id="@+id/buttonMainToday"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-5dp"
        android:layout_weight="0"
        android:text="@string/today"
        android:width="50dp" />

    <Button
        android:id="@+id/buttonMainEdit"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-5dp"
        android:layout_weight="0"
        android:text="@string/edit"
        android:width="50dp" />

</LinearLayout>